# bohmian-sim-lab

./: .gitignore  LICENSE  README.md  bohm_trajectories_calculator.py  bohmian_movie_maker.py  bohmian_viewer_color.py  bohmian_viewer_export.py  pyproject.toml  readme.docx  tdse_solver.py  tdse_visualizer.py
bohmian-sim-lab-teaching-kit/bohmian-sim-lab/: .gitignore  README.md
prompts/: intro.prompt.md
