[tool.poetry]
name = "bohm-python"
version = "0.1.0"
description = ""
authors = ["Crispin Barnes <chwb101@cam.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
